<resources>
    <string name="app_name">Firebase Auth</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="register">Register</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
